<resources>
    <string name="app_name">Habit</string>
    <string name="habitech">Habit</string>
    <string name="hello">Hello, %1$s!</string>
    <string name="personaldatentry_subtitle">May we know more about you?</string>
    <string name="personaldataentry_job">Job</string>
    <string name="personaldataentry_bio_hint">Tell the others something about you!</string>
    <string name="personaldatentry_bio_title">Bio</string>
    <string name="personaldataentry_button">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentchoosehobby_subtitle">Do you have any activity you would like to try?</string>
    <string name="fragmentchoosegenre_subtitle">Do you have any genres preference?</string>
    <string name="next">Next</string>
    <string name="fragmentchoosebook_subtitle">Any book that you have read before?</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Commitment</string>
    <string name="reading_books">READING BOOKS</string>
    <string name="server_client_id">346784273889-5kk3609mpir54gbm1jevgtbbq8f8avhl.apps.googleusercontent.com</string>
    <string name="age">Age</string>
    <string name="education">Education</string>
    <string name="swipe">Swipe right to start commitment</string>
    <string name="SHARED_PREFERENCE_KEY_NAME">KEY_NAME</string>
    <string name="unmatch"><![CDATA[< Unmatch]]></string>
    <string name="match"><![CDATA[Match >]]></string>
    <string name="home_commitment_subtitle">%1$s, check out your on going activites</string>
    <string name="fragmentbookcommitment_subtitle">Choose book that you want to read</string>
</resources>